# serenity_v3

./: .gitignore
.github/workflows/: backend-tests.yml
backend/: .gitignore  pyproject.toml
backend/agent/: agent.py  nodes.py  prompts.py  resilience.py  state.py  subagent.py  test_subagent.py  tools.py
backend/agent/evals/: datasets.py  eval_datasets.py  eval_init.py  plan_decision_fidelity.py  planner_judge_prompts.py  run_evals.py  tasks.py
backend/agent/evals/datasets/: planner_edge_cases.py  planner_use_cases.py
backend/app/: main.py  tracing.py
backend/app/routes/: agent.py
backend/lib/: domains.py
backend/tests/: conftest.py  helpers.py  test_current_turn_tool_messages.py  test_format_search_results.py  test_latest_ai_message.py  test_process_search_results.py  test_route_after_llm.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: fonts.ts  globals.css  layout.tsx  page.tsx
frontend/components/: ChatHeader.tsx  ChatUI.tsx  Composer.tsx  Message.tsx  MessageList.tsx  ModelPicker.tsx  StreamingText.tsx  icons.tsx
frontend/lib/: api.ts  demoConversation.tsx
frontend/types/: chat.ts
