[project]
name = "serenity-backend"
version = "0.1.0"
description = "Serenity backend: FastAPI app + LangGraph agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "pytest>=9.1.1",
    "langchain-openai>=1.3.3",
    "langchain-anthropic>=1.4.8",
    "langchain>=0.3",
    "braintrust>=0.26.0",
    "anthropic>=0.116.0",
    "autoevals>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "agent"]
